test/end-to-end/compile-errors/main-duplicate.crow
main void()
	()

main nat^(_ string[])
	()
